# safety-drive

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  static_analysis.yml
IA/: main.py  model_cedric_v1.py  model_kaggle_v1.py  model_kaggle_v2.py  model_kaggle_v3.py  test.py
distracted_drivers_recognition/: README.md  requirements.txt
distracted_drivers_recognition/src/: config.py  create_video_tests.py  evaluate.py  model.py  pipeline.py  preprocess.py  requirements.txt  t.py  train.py  utils.py
distracted_drivers_recognition/terraform/: main.tf  variables.tf
ia/: model_cedric_v1.py  model_kaggle_v1.py  model_kaggle_v2.py  model_kaggle_v3.py  test.py
ia/Data/: result_v3.csv
infrastructure/: .env.example  Dockerfile  Dockerfile.serverless  Dockerfile.web_app  Makefile  docker-compose.yaml  requirements-web-app.txt  requirements.txt  requirements_serverless.txt  script_create_db.py
infrastructure/src/: config.py  lambda_function.py  lambda_serverless.py  zip_and_package.sh
infrastructure/terraform/: data.tf  ecr.tf  lambda.tf  locals.tf  logs.tf  main.tf  policies.tf  providers.tf  rds.tf  resources.tf  serverless.tf  terraform.example.tfvars  terraform.tfvars  variables.tf
infrastructure/utils/: install.sh
mobile_app/: client.py  index.kv  kinesis.py  server.py  test.py
mobile_app/safety_drive_flutter_app_project/: README.md  lib.rar  pubspec.yaml
safety-drive/: pyproject.toml
terraform/: main.tf
web_app/: .prettierignore  README.md  package.json
(+83 files in other folders)
