[tool.poetry]
name = "safety-drive"
version = "0.1.0"
description = ""
authors = ["Réda Maizate <reda.maizate@affluences.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"
pygame = "^2.1.2"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
